# rust

./: Cargo.toml  README.md
src/: lib.rs
src/services/: mod.rs
src/services/v1/: error.rs  mod.rs  requests.rs  response.rs  storage.rs  visibilities.rs
src/structs/: blue.rs  commonres.rs  mod.rs  profile.rs  tex.rs  triggers.rs
src/traits/: errortrait.rs  mod.rs  restrait.rs  serdeany.rs  taskres.rs
