[package]
name = "goodmorning-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true}
erased-serde = { version = "0.3", optional = true}
serde_json = { version = "1", optional = true}
dyn-clone = "1"
typetag = "0.2"

[features]
default = ["debug", "services-v1", "res-serde", "restrait", "req-serde", "profile-validate"]
debug = []

res-serde = ["res-ser", "res-de"]
res-ser = ["serde-any"]
res-de = ["serde-any"]

req-serde = ["req-ser", "req-de"]
req-ser = ["serde-any"]
req-de = ["serde-any"]

profile-validate =  ["dep:chrono"]
serde-any = ["dep:serde", "dep:erased-serde", "dep:serde_json"]

services-v1 = []

restrait = []
